# EL-Agents

./: README.md  main.py  pyproject.toml
agents/: rag_agent.py
agents/academic_paper_agent/: agent.py  prompt.py
agents/academic_paper_agent/sub_agents/academic_websearcher/: agent.py
agents/academic_paper_agent/sub_agents/paper_abstractor/: __init__.py  agent.py  prompt.py
agents/gourmet_agent/: agent-litellm.py  agent.py  app.py
agents/retrieval_agent/: agent.py  indexing_on_vertex.py
agents/template_agent/: agent.py  prompt.py
data/: openapi.json  places.json
langagent/datetime-agent/: agent.py
langgraph_agent/datetime-agent1/: agent.py
langgraph_agent/datetime-agent2/: agent.py
tools/: alchemytool.py  fetchtool.py  httptool.py  mcp-gourmets.py  mcp-jason.py  mcp_gourmet.py  milvustool.py  structuringtool.py  tests.py  timetool.py
utils/: llm_client.py  llm_config.yaml  prompts.yaml  response_schema.py
