[project]
name = "el-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.121.3",
    "fastmcp>=2.13.1",
    "google-adk>=1.18.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "ollama>=0.6.1",
    "openai>=2.8.1",
]
